<resources>
    <string name="app_name">Bookshelf</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="new_user_sign_up">New User, <font color="#FF0000">Sign Up</font></string>
    <string name="user_name_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ ></string>
    <string name="query_tags">-,_1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ ></string>
    <string name="query_digits"> -_.1234567890@abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ></string>
    <string name="email_digits"><![CDATA[!@-_.1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ]]></string>
    <string name="password_digits"><![CDATA[!@#$?<>!-=%^&*()_+.1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ]]></string>
    <string name="password_must_contain_at_least_8_characters">Password must contain at least 8 characters with at least one number, one lowercase letter, one uppercase letter, and one special character.</string>
    <string name="please_enter_minimum_3_characters">Please enter minimum 3 characters</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address!</string>
    <string name="email">Email Id</string>
    <string name="sign_up_to_continue">Sign Up to continue</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_account_sign_in">Already Account, <font color="#FF0000">Sign In</font></string>
    <string name="please_enter_a_valid_email_password"><![CDATA[Please enter a valid email & password!]]></string>
    <string name="account_already_exist_please_do_sign_in">Account already exist, please do Sign In!</string>
    <string name="select_country">Select Your Country</string>
    <string name="search_book">Search Book</string>
    <string name="fav">Fav</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="logout">Logout</string>
    <string name="published_in_s">Published in %s</string>
    <string name="double_click_to_logout">Double click to logout!</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets</string>
    <string name="signup_successful_you_can_sign_in_now">Signup Successful, you can Sign In now!</string>
    <string name="signup_failed">Signup Failed</string>
    <string name="add_tag">Add Tag</string>
    <string name="sort_by_year">Sort by year:</string>
    <string name="enter_tags_comma_separated">Enter tags ( `,` comma-separated)</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_tags">Add Tags</string>
</resources>