<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_top_right_corner"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textSize="28sp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/sign_up_to_continue"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_btn_bordered_light"
                    android:hint="@string/full_name"
                    android:padding="5dp"
                    app:hintTextAppearance="@style/TextAppearance.Design.Hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:backgroundTint="#0055FF"
                        android:digits="@string/user_name_digits"
                        android:gravity="center_vertical"
                        android:imeOptions="actionNext|flagForceAscii"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:textColorHint="#808080"
                        android:textSize="16sp"
                        app:boxStrokeColor="#0055FF"
                        app:boxStrokeWidth="2dp"
                        app:hintTextColor="#202020" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_btn_bordered_light"
                    android:hint="@string/email"
                    android:padding="5dp"
                    app:hintTextAppearance="@style/TextAppearance.Design.Hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_user_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:backgroundTint="#0055FF"
                        android:digits="@string/email_digits"
                        android:gravity="center_vertical"
                        android:imeOptions="actionNext|flagForceAscii"
                        android:inputType="textEmailAddress"
                        android:maxLength="40"
                        android:maxLines="1"
                        android:textColorHint="#808080"
                        android:textSize="16sp"
                        app:boxStrokeColor="#0055FF"
                        app:boxStrokeWidth="2dp"
                        app:hintTextColor="#202020" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_btn_bordered_light"
                    android:hint="@string/password"
                    android:padding="5dp"
                    app:errorTextColor="@color/red"
                    app:hintTextAppearance="@style/TextAppearance.Design.Hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:backgroundTint="#0055FF"
                        android:digits="@string/password_digits"
                        android:gravity="center_vertical"
                        android:imeOptions="actionNext|flagForceAscii"
                        android:inputType="textPassword"
                        android:maxLength="40"
                        android:maxLines="1"
                        android:textColorHint="#808080"
                        android:textSize="16sp"
                        app:boxStrokeColor="#0055FF"
                        app:boxStrokeWidth="2dp"
                        app:hintTextColor="#202020" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_sign_up"
                    style="@style/MaterialButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:enabled="false"
                    android:text="@string/sign_up"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:text="@string/already_account_sign_in" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
